<resources>
    <string name="app_name">ExpenseTacker</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_my_expenses">My Expenses</string>
    <string name="menu_my_transaction">Transaction</string>
    <string name="welcome">Welcome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sign_in_for_new_account">Sign in for new account</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="action_logout">Logout</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_in">Sign in</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="enter_date_yyyy_mm_dd">Enter date (YYYY-MM-DD)</string>
    <string name="select_tag">Select Tag</string>
    <string name="amount">Amount</string>
    <string name="expense">Expense</string>
    <string name="add_expense">Add Expense</string>
    <string name="save">Save</string>
    <string name="btn_update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="tv_my_budget">My Budget</string>
    <string name="btn_add_balance">Add Balance</string>
    <string name="btn_add">Add</string>
    <string name="yearly">Yearly</string>
    <string name="monthly">Monthly</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="cash_flow">Cash Flow</string>
    <string name="current_balance">Current Balance</string>
    <string name="btn_save_and_next">Save and Next</string>
    <string name="no_record_found">No Record found.</string>
</resources>