<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.myproject.expensetacker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.myproject.expensetacker.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.myproject.expensetacker.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_my_expenses"
        android:name="com.myproject.expensetacker.ui.showExpenses.ShowExpensesFragment"
        android:label="@string/menu_my_expenses"
        tools:layout="@layout/fragment_show_expenses" />
    <fragment
        android:id="@+id/nav_my_transaction"
        android:name="com.myproject.expensetacker.ui.showTransaction.TransactionFragment"
        android:label="@string/menu_my_transaction"
        tools:layout="@layout/fragment_transaction" />
</navigation>