<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:visible="false"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:visible="false"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_my_expenses"
            android:icon="@drawable/icon_currency_rupee"
            android:title="@string/menu_my_expenses" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icon_logout"
            android:title="@string/action_logout" />
        <item
            android:id="@+id/nav_month"
            android:icon="@drawable/icon_logout"
            android:title="Month" />
    </group>
</menu>